added css styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Forecast</title>
+    <link rel="stylesheet" href="./style.css">
+    <script></script>
   </head>
 
   <body>
@@ -30,6 +32,16 @@
       </div>
     </div>
 
+    <div class="bot">
+      <h2>24 Hour Forecast</h2>
+      <div class="scroll">
+        <div class="temp-perHour">
+          <h5>time</h5>
+          <h3>temp</h3>
+          <h5>status</h5>
+        </div>
+      </div>
+    </div>
 
   </body>
 
