--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <div class="bot">
       <h2>24 Hour Forecast</h2>
       <div class="scroll">
-        <div class="cards">
-          <!-- <h5 class="time">time</h5>
+        <!-- <div class="cards">
+          <h5 class="time">time</h5>
           <h3 class="temp">temp</h3>
-          <h5 class="condition">condition</h5> -->
-        </div>
+          <h5 class="condition">condition</h5>
+        </div> -->
       </div>
     </div>
 
