modified html to create current div and modified app.js and css to match

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     </div>
 
     <div class="current-container">
-      <div class="current">
-        <!-- name -->
-        <div class="current-temp">
-          <!-- <p>temp</p>
-          <p>condition</p> -->
-        </div>
-        <div class="current-condition">
-          <!-- <p class="wind-speed">Wind Speed:</p>
-          <p class="humidity">Humidity:</p>
-          <p class="precipitation">Precipitation:</p> -->
-        </div>
-      </div>
+      <!-- <p>location</p> -->
+      <!-- <div class="current"> -->
+      <!-- <div class="current-temp"> -->
+      <!-- <p>temp</p> -->
+      <!-- <p>condition</p> -->
+      <!-- </div> -->
+      <!-- <div class="current-condition"> -->
+      <!-- <p class="wind-speed">Wind Speed:</p> -->
+      <!-- <p class="humidity">Humidity:</p> -->
+      <!-- <p class="precipitation">Precipitation:</p> -->
+      <!-- </div> -->
+      <!-- </div> -->
     </div>
 
     <div class="bot">
